--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,14 @@ yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
 
+# IDE
+.idea/
+
 # Firebase cache
 .firebase/
 
 # Firebase config
-
-# Uncomment this if you'd like others to create their own Firebase project.
-# For a team working on the same Firebase project(s), it is recommended to leave
-# it commented so all members can deploy to the same project(s) in .firebaserc.
-# .firebaserc
+.firebaserc
 
 # Runtime data
 pids
@@ -67,3 +66,4 @@ node_modules/
 
 # local env
 functions/src/.appConfig.local.ts
+
